--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 	z-index: 700;
 	padding-top: 15px;
 	padding-bottom: 15px;
-	padding-left: 8px;
+	padding-left: calc(var(--padding-left) * 3);
 }
 article {
 	padding-bottom: 0%;
@@ -267,7 +267,7 @@ h3 {
 	font-weight: bold;
 	line-height: 145%;
 	font-size: calc(var(--root-size-h3) * 2);
-    padding-left: calc(var(--padding-left-sticky) * 2);
+    padding-left: calc(var(--padding-left-sticky) * 3);
 }
 article {
 	margin-top: 0;
@@ -325,7 +325,6 @@ section {
 		z-index: 600;
 		position: relative;
 		border-bottom: 1.5px solid #AD8AFF;
-
 	}
 	#titlebelow {
 		padding-bottom: 208.5px;
@@ -348,4 +347,7 @@ section {
 		line-height: 170%;
 		padding-top: 30px;
 	}
+	a:hover {
+		color: #AD8AFF;
+	  }
 }
