--- a/article-crime/style.css
+++ b/article-crime/style.css
@@ -1,97 +1,487 @@
-.authordiv {
-    display: flex;
-    flex-direction: column;
-    line-height: 120%;
+/* root variables */
+:root {
+    --root-size: 8px;
+    --root-size-nav: 8px;
+    --root-size-big: 16px;
+    --root-size-h1: 21px;
+    --root-size-sub: 21px;
+    --root-size-h2: 46px;
+    --root-size-h3: 14px;
+    --root-size-h: 14px;
+    --root-line-height: 20px;
+    --padding-left: 8px;
+    --width-p: 21ch;
+    --padding-left-p: 8px;
+    --padding-left-sticky: 8px;
+    --margin-p-left: 8px;
+    --margin-p-right: 8px;
 }
-.headerdiv {
-    padding-bottom: 20px;
-	line-height: 90px;
+ /* mobile */
+  /* Header section */
+  body {
+	background-color:#121313;
+	position: relative;
+	padding-bottom: 0%;
 }
 header {
     color: #e8e8e8;
     background-color:  #1A1A1A;
-    font-family: "Oxanium", serif;
-    font-weight: bold;
+    font-family: "Montserrat";
+    font-weight:600;
     line-height: calc(var(--root-line-height) * 4);
     padding-left: calc(var(--padding-left) * 2);
     padding-top: 40px;
     display: flex;
 }
+.headerdiv {
+    padding-bottom: 20px;
+}
+ /* Title and Author */
+#titlecontinue {
+    font-size: calc(var(--root-size-h2) * 2);
+    font-family: "Oxanium", serif;
+    font-style: normal;
+}
+#discipline {
+    font-size: calc(var(--root-size-sub) * 3.05);
+    color: #AD8AFF;
+}
+.authordiv {
+    font-family: "Montserrat";
+    color: #eeeeee;
+    background-color: #0f0f0f;
+    display: flex;
+    flex-direction: column;
+    line-height: 120%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 12px;
+}
+ /* Author's name, volume, and year */
+#volume {
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-size: calc(var(--root-size-h) * 1.5);
+    border-left: 3px solid;
+    border-color: #FE5B51;
+    padding-left: 20px;
+    padding-bottom: 10px;
+}
+#author1 {
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-size: calc(var(--root-size-h) * 1.5);
+    border-left: 3px solid;
+    border-color: #FE5B51;
+    padding: 10px;
+    padding-left: 20px;
+}
+#author2 {
+    font-size: calc(var(--root-size-h) * 1.5);
+    border-left: 3px solid;
+    border-color: #FE5B51;
+    padding: 10px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+}
+
+/* Titles and body texts */
 h1 {
     font-size: calc(var(--root-size-h1) * 1.95);
 }
 h2 { 
     font-size: calc(var(--root-size-h2) * 2);
 }
-#andother {
-	font-size: calc(var(--root-size-h2) * 0.84);
-}
-#crime {
-    font-size: calc(var(--root-size-sub) * 5.5);
-    color: #FE5B51;
-}
- /* Author's name, volume, and year */
- #volume {
-    font-size: calc(var(--root-size-h) * 1.5);
-    border-bottom: 3px solid;
-    border-color: #FACA01;
-    padding-left: 0;
-    padding-bottom: 10px;
-}
-#author1 {
-    font-size: calc(var(--root-size-h) * 1.5);
-    border-left: 3px solid;
-    border-color: #FE5B51;
-    padding: 10px;
-}
 h3 {
-    font-family: "Oxanium", serif;
+    font-family: "DM Serif Display", serif;
+    font-style: italic;
     font-weight: bold;
-    font-style: normal;
     line-height: 120%;
-    font-size: calc(var(--root-size-h3) * 2);
+    font-size: calc(var(--root-size-h3) * 1.7);
     padding-left: calc(var(--padding-left-sticky) * 2);
 }
 h4 {
     font-family: "Oxanium", serif;
     font-weight: bold;
-    font-size: 28px;
+    font-size: calc(var(--root-size-h3) * 1.5);
     margin-left: 16px;
     line-height: 145%;
-}
-.bigtext1 {
-    width: calc(var(--width-p) * 1);
-}
-
- /* Arrow button to the top */
- #arrow {
-    color: rgb(32, 32, 32);
-    background-color: rgb(255, 255, 255);
-    border: #0a0a0a;
-    width: 50px;
-    border-style: inset;
-    border-radius: 8px;
-    font-size: 24px;
-    font-weight: bold;
-    padding: 10px;
-    bottom: calc(var(--bottom-arrow) * 2);
-    right: 20px;
-    z-index: 100;
-    position: fixed;
-}
-
-mark {
-	background-color: #FE5B51;
 }
 p {
     font-family: 'Lato';
 }
+sup {
+    color: #FE5B51;
+}
+mark {
+    background-color: #f1d45f;
+}
+.noteparagraph {
+    width: calc(var(--width-citationbox) * 2.35);
+    background-color: #f1d45f;
+    border: 2px solid #0c0c0c;
+    margin-top: 60px;
+    font-size: calc(var(--root-size-bigt) * 2.5);
+    text-align: center; 
+}
+ /* Dropdown footnotes div */
+ /* Div inside: details > summary >footnotediv (has text and the arrow) */
+ #footnotediv {
+    display: grid;
+    grid-template-columns: 7fr 1fr;
+}
+ /* Arrow inside footnotediv */
+#arrow-foot {
+    display: inline-block;
+    transition: transform 0.3s ease;
+  }
+ /* Dynamic button for the footnote dropdown */
+details[open] #arrow-foot {
+    transform: scaleY(-1);
+  }
+summary {
+    margin-left: calc(var(--margin-p-left) * 1);
+    padding-left: 14px;
+    margin-top: 40px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    font-size: 20px;
+    font-weight: bold;
+    border-top: 2px solid #0c0c0c;
+    border-bottom:2px solid #0c0c0c;
+    border-right:2px solid #0c0c0c;
+    border-left:2px solid #0c0c0c;
+    background-color:#ddd1fb;
+    width: calc(var(--width-citationbox) * 2.35);
+}
+details[open] summary {
+    border-bottom: none;
+}
+ul {
+    background-color:#ddd1fb;
+    width: calc(var(--width-citationbox) * 2.35);
+    margin-left: calc(var(--margin-p-left) * 1);
+    border-bottom:2px solid #0c0c0c;
+    border-right:2px solid #0c0c0c;
+    border-left:2px solid #0c0c0c;
+    padding-bottom: 30px;
+   
+}
+ /* Class for the footnote paragraphs */
+.footnote {
+    font-size: calc(var(--root-size) * 1.7);
+    width: 94%;
+}
+
+/* Further body section */
+ /* sections with background color */
+ .withbackground {
+    background-color: #D9D9D9;
+    padding-bottom: 20px;
+    padding-top: 20px
+}
+ /* big texts */
+
+
+ /* Sticky titles */
+.stickytitle {
+    background-color: #e4e4e4;
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2);
+
+}
+.stickytitledark {
+    background-color: #AD8AFF;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2);
+
+}
+.stickytitle2 {
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 3;
+    background-color: #1A1A1A;
+    color: white;
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2.5);
+}
+.stickytitle3 {
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    background-color: #1A1A1A;
+    color: white;
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2.5);
+}
+.stickytitle4 {
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    background-color: #1A1A1A;
+    color: white;
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2.5);
+}
+.stickytitle5 {
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 8;
+    background-color: #1A1A1A;
+    color: white;
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2);
+}
+.stickytitle6 {
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background-color: #1A1A1A;
+    color: white;
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2.5);
+}
+.stickytitle7 {
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 12;
+    background-color: #D9D9D9;
+    color: rgb(16, 16, 16);
+    padding-top: 10px;
+	padding-bottom: 10px;
+    padding-left: calc(var(--padding-left-sticky) * 2.5);
+}
+ /* Sections with the sticky */
+.frontsection {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #D9D9D9;
+    position: relative;
+    z-index: 2;
+}
+
+.frontsection2 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #D9D9D9;
+    position: relative;
+    z-index: 4;
+}
+.frontsection3 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #ffffff;
+    position: relative;
+    z-index: 5;
+}
+.frontsection4 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #ffffff;
+    position: relative;
+    z-index: 9;
+}
+.frontsection5 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #ffffff;
+    position: relative;
+    z-index: 11;
+}
+ /* Subheading for the "An Alternative Disciplinary" title */
+#subtitle-alternative {
+    font-size: 18px;
+    font-weight: 600;
+}
+ /* Conclusion's paragraph */
+#lastparagraph {
+    margin-bottom: 40px;
+}
+ /* New header section */
+.titlebig {
+	z-index: 100;
+	position:relative;
+}
+
+#titlebelow {
+	padding-bottom: 50px;
+}
+ /* Text animation header new */
+.headcontainer {
+	overflow: hidden;
+	background-color: #121313;
+    width: auto;
+    height: 260px;
+    margin: 0%;
+}
+.headertext {
+	display:inline;
+	white-space: nowrap;
+	width: auto;
+	position: relative;
+	overflow: hidden;
+    margin-left: -100px;
+    margin-right: -100px;
+    margin-bottom: -20px;
+}
+/* this line of code makes the text animation not overflow */
+
+header {
+	transform: rotate(-24deg);
+    padding: 0%;
+    margin: 0%;
+    background-color: #121313;
+}
+.headcontainer {
+	overflow: hidden;
+	max-height: 450px;
+}
+.maindivhead {
+	padding-top: 0;
+	margin-top: 0;
+}
+article {
+    background-color: white;
+}
+
+.crimeanimatedtextred {
+    font-family: "DM Serif Display", serif;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 24px;
+	padding: 1px;
+	padding-left: 12px;
+	padding-right: 12px;
+	background-color:#0f0f0f;
+    /* border-bottom: 1.5px solid #727272; */
+    /* border-top: 1.5px solid #727272; */
+	color: #ababab;
+	margin-bottom: 8px;
+}
+.disciplineanimatedtextpurple {
+	padding: 2px;
+	padding-left: 12px;
+	padding-right: 12px;
+	background-color:#AD8AFF;
+	color: #161616;
+	margin-bottom: 8px;
+}
+.disciplineanimatedtext {
+	background-color:#202020;
+	padding: 2px;
+	padding-left: 12px;
+	padding-right: 12px;
+	margin-bottom: 8px;
+}
+.crimeanimatedtext {
+    font-family: "DM Serif Display", serif;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 24px;
+	background-color:#0f0f0f;
+    /* border-bottom: 1.5px solid #727272; */
+    /* border-top: 1.5px solid #727272; */
+	padding: 2px;
+    color: #ababab;
+	padding-left: 12px;
+	padding-right: 12px;
+	margin-bottom: 8px;
+}
+.crime {
+	color:#2c2c2c;
+	display: flex;
+	-webkit-animation: loop 19s infinite linear;
+	animation: loop 19s infinite linear;
+	white-space: nowrap;
+}
+.factoryanimatedtext {
+    font-size: 54px;
+	padding: 2px;
+	padding-left: 20px;
+	padding-right: 20px;
+    background-color:#0f0f0f;
+	margin-bottom: 8px;
+}
+.factoryanimatedtextyellow {
+    font-size: 54px;
+    font-family: "DM Serif Display", serif;
+    font-style: italic;
+    font-weight: bold;
+	padding: 2px;
+	padding-left: 20px;
+	padding-right: 20px;
+	background-color:#FE5B51;
+	color: #131313;
+	margin-bottom: 8px;
+}
+.evolutionanimatedtextblue {
+	background-color: #51C4FE;
+	padding: 2px;
+	padding-left: 12px;
+	padding-right: 12px;
+	margin-bottom: 8px;
+	color: #131313;
+}
+.evolutionanimatedtext {
+	background-color:#202020;
+	padding: 2px;
+	padding-left: 12px;
+	padding-right: 12px;
+	margin-bottom: 8px;
+}
+.factory {
+	display: flex;
+	-webkit-animation: loop 18s infinite linear;
+	animation: loop 18s infinite linear;
+
+}
+.discipline {
+	display: flex;
+	-webkit-animation: loop 20s infinite linear;
+	animation: loop 20s infinite linear;
+}
+/* animation for the text */
+@keyframes loop {
+	100% {
+	  -webkit-transform: translateX(-100%);
+	  transform: translateX(-100%);
+	}
+  }
 
 
 @media (min-width: 950px) {
     :root {
-        --root-size: 10px;
-        --root-size-nav: 12px;
+        --root-size: 9px;
+        --root-size-bigt: 10px;
+        --root-size-nav: 10px;
         --padding-left: 50px;
         --root-size-big: 16px;
         --root-size-h1: 32px;
@@ -99,48 +489,105 @@ p {
         --root-size-h2: 50px;
         --root-size-h3: 16px;
         --padding-left-p: 50px;
-        --width-p: 40ch;
+        --width-p: 44ch;
+        --width-bigt: 50ch;
         --left-arrow: 480px;
         --right-arrow: 20px;
         --bottom-arrow: 60px;
         --padding-left-sticky: 27px;
+        --width-citationbox: 187.3px;
 	}
 
-    .twocontentsheader {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        gap: 90px;
-    }
     header {
         padding-bottom: 60px;
         line-height: 100px;
     }
-    .readnext {
+    .twocontentsheader {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 100px;
+    }
+    .paragraph-withfootnotes {
+        display: grid;
+        grid-template-columns: 1.7fr 1fr;
+        gap: 10px; 
+        align-items: start; 
+      }
+      .paragraphs {
+        padding: 10px;
+      }
+      ul {
+        width: 440px;
+      }
+      summary {
+        width: 440px;
+      }
+      .readnext {
         margin-left: calc(var(--margin-left-next) * 6.5);
         margin-top: 40px;
         padding-bottom: 100px;
     }
-    #designandcrimetitle {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 20px;
-	}
-	#andother {
-		font-size: calc(var(--root-size-h2) * 1.2);
-	}
-	#crime {
-		font-size: calc(var(--root-size-sub) * 3);
-		color: #FE5B51;
-	}
-	#top {
-		font-size: calc(var(--root-size-sub) * 3);
-	}
-	header {
-		padding-top: 60px;
-        padding-bottom: 60px;
-        line-height: 100px;
+    #navbar {
+        padding-left: 100px;
+        padding-right: 100px;
     }
+     /* New header section */
+    .maindivhead {
+		display: flex;
+		z-index: 600;
+		position: relative;
+		/* border-bottom: 1.5px solid #FE5B51; */
+	}
+    .headcontainer {
+		width: 180%;
+		max-height: 800px;
+		padding-bottom: 200px;
+		border-right: 1.5px solid #FE5B51;
+		}
+     .authordiv {
+            width: 100%;
+        }
+        #volume {
+            border: hidden;
+            font-size: 42px;
+        }
+        #author1 {
+            border: hidden;
+            font-size: 24px;
+            font-weight: 300;
+        }
+        header {
+            transform: rotate(-12deg);
+        }
+        .headertext {
+            margin-top: -50px;
+        }
 
-
+        .crime {
+            color:#2c2c2c;
+            display: flex;
+            -webkit-animation: loop 22s infinite linear;
+            animation: loop 22s infinite linear;
+            white-space: nowrap;
+        }
+        .factory {
+            display: flex;
+            -webkit-animation: loop 25s infinite linear;
+            animation: loop 25s infinite linear;
+        
+        }
+        .discipline {
+            display: flex;
+            -webkit-animation: loop 26s infinite linear;
+            animation: loop 26s infinite linear;
+        }
+        /* animation for the text */
+        @keyframes loop {
+            100% {
+              -webkit-transform: translateX(-100%);
+              transform: translateX(-100%);
+            }
+          }
+    
 }
 
