--- a/article-crime/style.css
+++ b/article-crime/style.css
@@ -114,7 +114,10 @@ sup {
     color: #FE5B51;
 }
 mark {
-    background-color: #f1d45f;
+    background-color: #FE5B51;
+}
+a:hover {
+    color: #FE5B51;
 }
 .noteparagraph {
     width: calc(var(--width-citationbox) * 2.35);
