--- a/common.css
+++ b/common.css
@@ -65,6 +65,19 @@ p {
     line-height: 170%;
 	padding-top: 30px;
 }
+footer {
+	background-color: #121313;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	font-family: "Oxanium", serif;
+	font-weight:600;
+	font-size: calc(var(--root-size) * 2.5);
+}
+h5 {
+	color: #A4A4A4;
+	padding-bottom: 50px;
+	text-align: center;
+}
 
 sup {
     line-height: 0;
@@ -103,7 +116,7 @@ i {
 .readnext {
 	margin: 16px;
 	margin-top: 40px;
-	margin-bottom: 100px;
+	margin-bottom: 30px;
 	
 }
 /* Navbar at the bottom */
@@ -149,6 +162,6 @@ i {
 .readnext {
     margin-left: calc(var(--margin-left-next) * 1);
     margin-top: 40px;
-	padding-bottom: 100px;
+	padding-bottom: 0px;
 }
 
