--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -373,7 +373,7 @@ header {
 	margin-top: 0;
 }
 article {
-    background-color: white;
+    background-color: #e4e4e4;
 }
 
 .crimeanimatedtextred {
