added link to the read next for discipline

--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -508,7 +508,7 @@ article {
 	padding-left: 20px;
 	padding-right: 20px;
     color: #e8e8e8;
-    background-color:#001c25;
+    background-color:#291e43;
 	margin-bottom: 8px;
 }
 .settingstextblue {
@@ -518,7 +518,7 @@ article {
 	padding: 2px;
 	padding-left: 20px;
 	padding-right: 20px;
-	background-color:#51C4FE;
+	background-color:#AD8AFF;
 	color: #131313;
 	margin-bottom: 8px;
 }
