--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@
     --width-p: 21ch;
 	--width-p-colophon: 30ch;
     --padding-left-p: 8px;
-    --padding-left-sticky: 8px;
+    --padding-left-sticky: 6px;
     --margin-p-left: 8px;
 	--margin-colophon: 4px;
     --margin-p-right: 8px;
+	--p-margin-side: 2%;
+	--p-margin-intropa: 2%;
 }
 /* this line of code makes the text animation not overflow */
 .headcontainer {
@@ -101,7 +103,7 @@ body {
 	z-index: 700;
 	padding-top: 15px;
 	padding-bottom: 15px;
-	padding-left: calc(var(--padding-left) * 3);
+	padding-left: calc(var(--padding-left-sticky) * 1);
 }
 article {
 	padding-bottom: 0%;
@@ -139,7 +141,7 @@ h2 {
 	padding-bottom: 30px;
 	padding-top: 30px;
 	width: auto;
-	filter: hue-rotate(-70deg) drop-shadow(8px 8px #FE5B51);
+	filter: hue-rotate(-70deg) drop-shadow(8px 8px #AD8AFF);
 }
 .colophonparagraph {
 	width: calc(var(--width-p-colophon) * 2);
@@ -282,6 +284,7 @@ h3 {
 	line-height: 145%;
 	font-size: calc(var(--root-size-h3) * 2);
     padding-left: calc(var(--padding-left-sticky) * 3);
+	width: auto;
 }
 article {
 	margin-top: 0;
@@ -306,11 +309,30 @@ section {
 	margin-left: 30px;
 	
 }
+p {
+	width: auto;
+	font-size: calc(var(--root-size) * 2);
+	margin-left: calc(var(--p-margin-side) * 3);
+	margin-right: calc(var(--p-margin-side) * 3);
+	margin-bottom: 30px;
+	line-height: 190%;
+}
+section {
+	padding-top: 60px;
+	padding-bottom: 30px;
+}
+.colophonparagraph {
+	width: auto;
+	font-size: calc(var(--root-size) * 2);
+	margin-left: calc(var(--p-margin-intropa) * 2);
+	margin-right: calc(var(--p-margin-intropa) * 2);
+	line-height: 175%;
+}
 
 /* Desktop media query */
 @media (min-width: 950px) {
     :root {
-        --root-size: 10px;
+        --root-size: 9px;
         --root-size-nav: 12px;
         --padding-left: 50px;
         --root-size-big: 16px;
@@ -322,8 +344,10 @@ section {
         --width-p: 40ch;
 		--margin-colophon: 170px;
 		--width-p-colophon: 20ch;
+		--p-margin-side: 9%;
+		--padding-left-sticky: 100px;
 	}
-	
+
 	.titlebig {
 		width: 100%;
 	}
@@ -333,7 +357,7 @@ section {
 		padding-bottom: 200px;
 		border-right: 1.5px solid #AD8AFF;
 		}
-
+	
 	.otherh1 {
 		padding-bottom: 40px;
 			}
@@ -353,17 +377,11 @@ section {
 		padding-top: 50px;
 	}
 	.sticky1 {
-		padding-left: 85px;
+		
 		border-bottom: 1.5px solid #080808;
 		border-top: 1.5px solid #080808;
 	}
-	p {
-		margin: auto;
-		width: calc(var(--width-p) * 1.7);
-		font-size: calc(var(--root-size) * 2);
-		line-height: 170%;
-		padding-top: 30px;
-	}
+	
 	a:hover {
 		color: #AD8AFF;
 	  }
