--- a/article-crime/style.css
+++ b/article-crime/style.css
@@ -11,10 +11,14 @@
     --root-line-height: 20px;
     --padding-left: 8px;
     --width-p: 21ch;
+	--width-p-colophon: 30ch;
     --padding-left-p: 8px;
-    --padding-left-sticky: 8px;
+    --padding-left-sticky: 6px;
     --margin-p-left: 8px;
+	--margin-colophon: 4px;
     --margin-p-right: 8px;
+	--p-margin-side: 2%;
+	--p-margin-intropa: 2%;
 }
  /* mobile */
   /* Header section */
@@ -109,9 +113,7 @@ h4 {
     margin-left: 16px;
     line-height: 145%;
 }
-p {
-    font-family: 'Lato';
-}
+
 sup {
     color: #FE5B51;
 }
@@ -156,14 +158,16 @@ summary {
     border-bottom:2px solid #0c0c0c;
     border-right:2px solid #0c0c0c;
     border-left:2px solid #0c0c0c;
-    background-color:#ddd1fb;
-    width: calc(var(--width-citationbox) * 2.35);
+    background-color:#250400;
+    color: #e4e4e4;
+    width: auto;
 }
 details[open] summary {
     border-bottom: none;
 }
 ul {
-    background-color:#ddd1fb;
+    background-color:#250400;
+    color: #e4e4e4;
     width: calc(var(--width-citationbox) * 2.35);
     margin-left: calc(var(--margin-p-left) * 1);
     border-bottom:2px solid #0c0c0c;
@@ -527,7 +531,21 @@ article {
 	  transform: translateX(-100%);
 	}
   }
-
+  p {
+    font-family: "Lato";
+	width: auto;
+	font-size: calc(var(--root-size) * 2);
+	margin-left: calc(var(--p-margin-side) * 3);
+	margin-right: calc(var(--p-margin-side) * 3);
+	margin-bottom: 30px;
+	line-height: 190%;
+}
+.bigtext1 {
+    font-family: "Lato";
+	width: auto;
+    margin-left: calc(var(--p-margin-side) * 3);
+	margin-right: calc(var(--p-margin-side) * 3);
+}
 
 @media (min-width: 950px) {
     :root {
@@ -548,6 +566,12 @@ article {
         --bottom-arrow: 60px;
         --padding-left-sticky: 27px;
         --width-citationbox: 187.3px;
+        --padding-left-p: 50px;
+        --width-p: 40ch;
+		--margin-colophon: 170px;
+		--width-p-colophon: 20ch;
+		--p-margin-side: 9%;
+		--padding-left-sticky: 100px;
 	}
 
     header {
